# Spotify-Automation

./: .env.example  .gitignore  README.md  deployment.md  docker-compose.yml  spoofy.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250206_create_users_oauth_playlists.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/auth/: __init__.py  routes.py  spotify_client.py
backend/app/core/: __init__.py  config.py  logging.py  security.py  validation.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/playlists/: __init__.py  routes.py  service.py
backend/app/schemas/: playlists.py
backend/app/tasks/: celery_app.py  tasks.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth_routes.py  test_db_models.py  test_logging.py  test_main.py  test_playlist_service.py  test_security.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.jsx  page.tsx
frontend/app/components/: SpotifyNotice.jsx
frontend/app/dashboard/: page.jsx
frontend/lib/: api.ts
tools/: doctor.py  doctor2.py
