[project]
name = "spotify-playlist-manager"
version = "0.1.0"
description = "Spotify Playlist Manager API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0,<0.116",
    "uvicorn[standard]>=0.27.0,<0.32",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "sqlalchemy>=2.0,<2.1",
    "psycopg2-binary>=2.9,<2.10",
    "alembic>=1.13,<1.14",
    "celery[redis]>=5.3,<6",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.26,<0.28",
    "ruff>=0.2,<0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
